--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,6 +2,6 @@
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
     <h1>Page Not Found</h1>
-    <p>Sometimes things get messy around the kitchen and things go missing under the counters or behind the fridge. <a
-            href="{{ url_for('main.index') }}">Return to home</a>.</p>
+    <p>Oh no! Sometimes the kitchen gets messy and things go missing. <a href="{{ url_for('main.index') }}">Return to
+        home</a>.</p>
 {% endblock %}
