--- a/app/templates/main/favourites.html
+++ b/app/templates/main/favourites.html
@@ -35,14 +35,14 @@
                     {# Buttons to add to mealplan/ favourites #}
                     {% if current_user.is_authenticated %}
                      <button id="addto_mealplan{{ result.recipe_id }}"
-                            onclick="ajax_addplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Add to Meal Plan
+                            onclick='ajax_addplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Add to Meal Plan
                     </button>
                     <button id="delfrom_mealplan{{ result.recipe_id }}"
-                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal Plan
+                            onclick='ajax_delplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Remove from Meal Plan
                     </button>
                     <br>
                     <br>
-                    <button id="unfav{{result.recipe_id}}" onclick="ajax_unfav('{{result.recipe_id}}')">Remove Favourite</button>
+                    <button id="unfav{{result.recipe_id}}" onclick='ajax_unfav("{{result.recipe_id}}")'>Remove Favourite</button>
                     {% endif %}
 
                 </div>
