--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -41,18 +41,18 @@
                     {% if current_user.is_authenticated %}
 
                     <button id="addto_mealplan{{ result.recipe_id }}"
-                            onclick="ajax_addplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Add to Meal Plan
+                            onclick='ajax_addplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Add to Meal Plan
                     </button>
                     <button id="delfrom_mealplan{{ result.recipe_id }}"
-                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal
+                            onclick='ajax_delplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Remove from Meal
                         Plan
                     </button>
                     <br>
                     <br>
                     <button id="fav{{ result.recipe_id }}"
-                            onclick="ajax_fav('{{result.recipe_id}}', '{{result.recipe_name}}')">Add Favourite</button>
+                            onclick='ajax_fav("{{result.recipe_id}}", "{{result.recipe_name}}")'>Add Favourite</button>
                     <button id="unfav{{ result.recipe_id }}"
-                            onclick="ajax_unfav('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove Favourite
+                            onclick='ajax_unfav("{{result.recipe_id}}", "{{result.recipe_name}}")'>Remove Favourite
                     </button>
 
                     {% endif %}
