--- a/app/templates/auth/account.html
+++ b/app/templates/auth/account.html
@@ -5,7 +5,7 @@
 <h3>Account details for {{ user.first_name }} {{ user.last_name }}</h3>
 <p>Email: {{ user.email }}</p>
 <p>Password: ********</p>
-<a class="nav-link" href="{{ url_for("auth.edit_password") }}">Edit password</a>
-<a class="nav-link" href="{{ url_for("auth.edit_preferences") }}">Edit food preferences</a>
+<a id="change-password" class="nav-link" href="{{ url_for("auth.edit_password") }}">Edit password</a>
+<a id="change-preferences" class="nav-link" href="{{ url_for("auth.edit_preferences") }}">Edit food preferences</a>
 
 {% endblock %}
