--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -24,4 +24,6 @@
 
 <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
         href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+<p>Our recipes are taken from <a href="https://bbcgoodfood.com" title="BBC Good Food">BBC Good Food</a>. Intended for
+    use as proof of concept, no copyright is intended.</p>
 {% endblock %}
