--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -34,7 +34,7 @@
                     <p class="card-text">
                         <img src="{{ url_for('static', filename=('img/icons/group.png')) }}" alt="serves icon"
                              height="15" align="middle">
-                        {{ result.serves }} peoples
+                        {{ result.serves }} {% if result.serves == 1 %}person{% else %}people{% endif %}
                     </p>
 
                     {# Buttons to add to mealplan/ favourites #}
