Changed email html, added reference to BBC Good Food and amended servings view

--- a/app/templates/main/about.html
+++ b/app/templates/main/about.html
@@ -20,7 +20,7 @@
     query a specific recipe <a href="{{ url_for('api.read_recipes') + '/' + random_recipe }}">like so</a>.</p>
 <br><br>
 
-<h5>Licenses</h5>
+<h5>Licenses and References</h5>
 
 <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
         href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
