--- a/app/templates/main/view_recipe.html
+++ b/app/templates/main/view_recipe.html
@@ -81,13 +81,29 @@
 {#-------------------------------------------------------------#}
 <a href="{{ url_for('main.recipes') }}">Return to all recipes</a>
 
-{#<button onclick="goBack()">Go Back</button>#}
+{#
+<button onclick="goBack()">Go Back</button>#}
 {##}
-{#<script>#}
-{#function goBack() {#}
-{#  window.history.back();#}
-{#}#}
-{#</script>#}
+{#
+<script>#
+}
+{
+    #function
+    goBack()
+    {
+        #
+    }
+    {
+        #  window.history.back();
+        #
+    }
+    {
+        #
+    }
+    #
+}
+{
+    #</script>#}
 
 
 {% endblock %}
