--- a/app/templates/errors/csrf_error.html
+++ b/app/templates/errors/csrf_error.html
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Access Error</h1>
     <p>{{ reason }}</p>
-    <p>You were directed to this site by another site or your token is not valid. <a href="{{ url_for('main.index') }}">Go to our homepage.</a>.</p>
+    <p>You were directed to this site by another site or your token is not valid. <a href="{{ url_for('main.index') }}">
+        Go to our homepage.</a>.</p>
 {% endblock content %}
