--- a/app/templates/main/favourites.html
+++ b/app/templates/main/favourites.html
@@ -34,15 +34,18 @@
 
                     {# Buttons to add to mealplan/ favourites #}
                     {% if current_user.is_authenticated %}
-                     <button id="addto_mealplan{{ result.recipe_id }}"
+                    <button id="addto_mealplan{{ result.recipe_id }}"
                             onclick='ajax_addplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Add to Meal Plan
                     </button>
                     <button id="delfrom_mealplan{{ result.recipe_id }}"
-                            onclick='ajax_delplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Remove from Meal Plan
+                            onclick='ajax_delplan("{{result.recipe_id}}", "{{result.recipe_name}}")'>Remove from Meal
+                        Plan
                     </button>
                     <br>
                     <br>
-                    <button id="unfav{{result.recipe_id}}" onclick='ajax_unfav("{{result.recipe_id}}")'>Remove Favourite</button>
+                    <button id="unfav{{result.recipe_id}}" onclick='ajax_unfav("{{result.recipe_id}}")'>Remove
+                        Favourite
+                    </button>
                     {% endif %}
 
                 </div>
@@ -68,50 +71,51 @@
 {% endblock %}
 
 {% block footer %}
-    <script src="{{ url_for('static', filename='js/toastr.js') }}"></script>
-    <script>
+<script src="{{ url_for('static', filename='js/toastr.js') }}"></script>
+<script>
 
-        function ajax_unfav(id) {
-            $.ajax({
-                url: "/remove_from_favourites/" + id, success: function (result) {
-                    if (result == 'success') {
+    function ajax_unfav(id) {
+        $.ajax({
+            url: "/remove_from_favourites/" + id, success: function (result) {
+                if (result == 'success') {
 
-                        location.reload();
-                    }
+                    location.reload();
                 }
-            });
-        }
-        function ajax_addplan(id, name) {
-            $.ajax({
-                url: "/add_to_mealplan/" + id, success: function (result) {
-                    if (result == 'success') {
+            }
+        });
+    }
 
-                        toastr.success('Added ' + name + ' to your meal plan!')
-                    } else if (result == 'failure') {
-                        toastr.error(name + ' is already in your meal plan!')
-                    } else {
-                        toastr.error('Cannot add recipe. Please create a meal plan first!')
-                    }
+    function ajax_addplan(id, name) {
+        $.ajax({
+            url: "/add_to_mealplan/" + id, success: function (result) {
+                if (result == 'success') {
+
+                    toastr.success('Added ' + name + ' to your meal plan!')
+                } else if (result == 'failure') {
+                    toastr.error(name + ' is already in your meal plan!')
+                } else {
+                    toastr.error('Cannot add recipe. Please create a meal plan first!')
                 }
-            });
-        }
+            }
+        });
+    }
 
-        function ajax_delplan(recipe_id, name) {
+    function ajax_delplan(recipe_id, name) {
 
-            var mealplan_id = 'x';
+        var mealplan_id = 'x';
 
-            $.ajax({
-                url: "/del_from_mealplan/" + mealplan_id + '/' + recipe_id, success: function (result) {
-                    if (result == 'success') {
+        $.ajax({
+            url: "/del_from_mealplan/" + mealplan_id + '/' + recipe_id, success: function (result) {
+                if (result == 'success') {
 
-                        toastr.warning('Removed ' + name + ' from your meal plan!')
-                    } else if (result == 'failure') {
-                        toastr.error(name + ' cannot be removed as it is not in your meal plan!')
-                    } else {
-                        toastr.error('Cannot remove recipe as no meal plan exists. Please create a meal plan first!')
-                    }
+                    toastr.warning('Removed ' + name + ' from your meal plan!')
+                } else if (result == 'failure') {
+                    toastr.error(name + ' cannot be removed as it is not in your meal plan!')
+                } else {
+                    toastr.error('Cannot remove recipe as no meal plan exists. Please create a meal plan first!')
                 }
-            });
-        }
-    </script>
+            }
+        });
+    }
+</script>
 {% endblock %}
