--- a/app/templates/main/advanced_search.html
+++ b/app/templates/main/advanced_search.html
@@ -15,9 +15,9 @@
             {{ wtf.form_field(form.search_term, class='form-control', placeholder="Enter recipe name") }}
             {# Slider for calorie range #}
             <p>
-                <label for="amount">Calorie range (per person):</label>
-                <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                <input class='form-control' id="hidden" name="hidden" type="hidden" value="">
+                <label for="cal_range">Calorie range (per person):</label>
+                <input type="text" id="cal_range" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                <input class='form-control' id="cals" name="cals" type="hidden" value="">
             </p>
             <div id="slider-range"></div>
             <br>
@@ -25,7 +25,7 @@
             <p>
                 <label for="cooking_time">Max cooking time:</label>
                 <input type="text" id="cooking_time" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                <input class='form-control' id="hidden2" name="hidden2" type="hidden" value="">
+                <input class='form-control' id="max_time" name="max_time" type="hidden" value="">
             </p>
             <div id="slider-range-min"></div>
             <br>
@@ -54,10 +54,10 @@
                 max: 1000,
                 values: [250, 750],
                 slide: function (event, ui) {
-                    $( "#amount" ).val(ui.values[ 0 ] + " - " + ui.values[ 1 ] );
+                    $( "#cal_range" ).val(ui.values[ 0 ] + " - " + ui.values[ 1 ] );
                 }
             });
-            $("#amount").val($("#slider-range").slider("values", 0) +
+            $("#cal_range").val($("#slider-range").slider("values", 0) +
                 " - " + $("#slider-range").slider("values", 1));
         });
 
@@ -76,9 +76,9 @@
 
         function SetRangeFunction() {
             var range = $("#slider-range").slider("values")
-            var max_cook_time = $("#slider-range-min").slider("value")
-            document.getElementById("hidden").setAttribute('value', range);
-            document.getElementById("hidden2").setAttribute('value', max_cook_time);
+            var time = $("#slider-range-min").slider("value")
+            document.getElementById("cals").setAttribute('value', range);
+            document.getElementById("max_time").setAttribute('value', time);
         }
     </script>
 {% endblock %}
