-Edited meal planning page

--- a/app/templates/main/mealplanner.html
+++ b/app/templates/main/mealplanner.html
@@ -6,38 +6,37 @@
 <p>Use the Meal Planner to organise your meals for the week. You can also favourite recipes to make them easier to
     find in the future.</p>
 <p>View your <a href="{{ url_for('main.mealplans_history') }}">old meal plans</a> if you want something familiar.</p>
-{#    {% if mealplan_active %}#}
-{#        <p>View your current mealplan here!</p>#}
-{#    {% endif %}#}
 
-<h4>Choosing and editing a meal plan</h4>
-<ol id="meal_planner_list">
-    <li>
-        <p><b>Continue with your most recent meal plan</b></p>
-        {% if most_recent != None %}
-        <p>Your active meal plan is:</p>
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">Meal plan ID</th>
-                <th scopw="col">Date & Time created</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>{{ most_recent.mealplan_id }}</td>
-                <td>{{ most_recent.created_at }}</td>
-                <td><a href="{{ url_for('main.view_mealplan', mealplan_id=most_recent.mealplan_id) }}">View&nbsp</a>
-                    <a href="{{ url_for('main.delete_mealplan', mealplan_id=most_recent.mealplan_id) }}">Delete</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        {% else %}
-        <p>You don't have any meal plans</p>
-        {% endif %}
-    </li>
+{% if most_recent == None %}
+    <h4>Create a new meal plan</h4>
+    <p>You don't have any meal plans yet. Click the button below to create one</p>
+    <form class="form-inline ml-auto" method="post">
+        <button class="btn btn-primary btn-outline-light">Create new meal plan</button>
+    </form>
+
+{% else %}
+<h4>Your active meal plan is:</h4>
+<table class="table">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">Meal plan ID</th>
+        <th scopw="col">Date & Time created</th>
+        <th scope="col">Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>{{ most_recent.mealplan_id }}</td>
+        <td>{{ most_recent.created_at }}</td>
+        <td><a href="{{ url_for('main.view_mealplan', mealplan_id=most_recent.mealplan_id) }}">View&nbsp</a>
+            <a href="{{ url_for('main.delete_mealplan', mealplan_id=most_recent.mealplan_id) }}">Delete</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<br>
+<h4>Editing your meal plan</h4>
+<ol>
     <li>
         <p>
             <b>Add recipes to mealplan</b>
@@ -60,5 +59,6 @@
         </form>
     </li>
 </ol>
+{% endif %}
 {% endblock %}
 
