--- a/app/templates/main/view_recipe.html
+++ b/app/templates/main/view_recipe.html
@@ -79,31 +79,14 @@
 
 
 {#-------------------------------------------------------------#}
-<a href="{{ url_for('main.recipes') }}">Return to all recipes</a>
-
-{#
-<button onclick="goBack()">Go Back</button>#}
-{##}
-{#
-<script>#
-}
-{
-    #function
-    goBack()
-    {
-        #
+<button type="button" class="btn btn-secondary" onclick="goBack()">Go back</button>
+<br>
+<br>
+{% endblock %}
+{% block footer %}
+<script>
+    function goBack() {
+        window.history.back();
     }
-    {
-        #  window.history.back();
-        #
-    }
-    {
-        #
-    }
-    #
-}
-{
-    #</script>#}
-
-
+</script>
 {% endblock %}
