--- a/app/templates/main/mealplanner.html
+++ b/app/templates/main/mealplanner.html
@@ -5,7 +5,9 @@
 <h3>Meal Planner</h3>
 <p>Use the Meal Planner to organise your meals for the week. You can also favourite recipes to make them easier to
     find in the future.</p>
+{% if most_recent != None %}
 <p>View your <a href="{{ url_for('main.mealplans_history') }}">old meal plans</a> if you want something familiar.</p>
+{% endif %}
 
 {% if most_recent == None %}
     <h4>Create a new meal plan</h4>
